--- a/TravelFriend.Windows/Styles/MyStyle.xaml
+++ b/TravelFriend.Windows/Styles/MyStyle.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
                     xmlns:local="clr-namespace:TravelFriend.Windows.Styles">
     <Style TargetType="{x:Type local:ImageButton}">
         <Setter Property="Template">
