--- a/TravelFriend.Windows/Main/PersonalDataPopup.xaml
+++ b/TravelFriend.Windows/Main/PersonalDataPopup.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:local="clr-namespace:TravelFriend.Windows.Main"
              xmlns:ms="clr-namespace:TravelFriend.Windows.Styles" 
              xmlns:common="clr-namespace:TravelFriend.Windows.Common"
@@ -37,7 +38,7 @@
                 </Border>
                 <StackPanel Grid.Column="1" Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Left">
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Width="85" Margin="15,0,0,0">
-                        <TextBlock x:Name="UserName" FontSize="14" Text="{Binding NickName}" TextTrimming="CharacterEllipsis"/>
+                        <TextBlock x:Name="NickName" FontSize="14" Text="{Binding NickName}" TextTrimming="CharacterEllipsis"/>
                         <Image Source="{Binding Gender,Converter={StaticResource GenderToImage}}" Width="14" Height="14" Margin="2 0 0 0" VerticalAlignment="Center"/>
                     </StackPanel>
                     <TextBlock x:Name="Address" FontSize="12" Text="{Binding Address}" Foreground="{StaticResource Gray}" TextTrimming="CharacterEllipsis" HorizontalAlignment="Left" Margin="15,10,0,0" Width="85"/>
