--- a/TravelFriend.Windows/Login/LoginWindow.xaml
+++ b/TravelFriend.Windows/Login/LoginWindow.xaml
@@ -62,7 +62,7 @@
                         </Button>
                         <materialDesign:PackIcon Grid.Column="1" Kind="WindowClose" Cursor="Hand" Background="Transparent" Foreground="{StaticResource MainGreen}" MouseLeftButtonUp="Close_MouseLeftButtonUp" Width="25" Height="25" Margin="10 0 0 0" VerticalAlignment="Center" HorizontalAlignment="Left"/>
                     </Grid>
-                    <Border Grid.Row="1" Width="200" Height="30" Margin="0 65 0 0" BorderThickness="0 0 0 1" BorderBrush="{StaticResource MainGreen}">
+                    <Border x:Name="Account" Grid.Row="1" Width="200" Height="30" Margin="0 65 0 0" BorderThickness="0 0 0 1" BorderBrush="{StaticResource MainGreen}">
                         <Grid VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto"/>
@@ -71,7 +71,7 @@
                             </Grid.ColumnDefinitions>
                             <Image Source="/Resources/Green/LoginAccount.png" HorizontalAlignment="Left" VerticalAlignment="Center" Height="20" Width="20"/>
                             <TextBox Grid.Column="1" Text="{Binding UserName}" materialDesign:HintAssist.Hint="{DynamicResource InputAccount}" FontSize="14" Padding="5 0 0 0" VerticalContentAlignment="Center" materialDesign:TextFieldAssist.UnderlineBrush="Transparent" BorderThickness="0"/>
-                            <Image Grid.Column="2" Source="/Resources/Green/DropDown.png" HorizontalAlignment="Right" VerticalAlignment="Center" Height="16" Width="16"/>
+                            <Image x:Name="SelectAccount" Grid.Column="2" Source="/Resources/Green/DropDown.png" Cursor="Hand" MouseLeftButtonUp="SelectAccount_MouseLeftButtonUp" HorizontalAlignment="Right" VerticalAlignment="Center" Height="16" Width="16"/>
                         </Grid>
                     </Border>
                     <Border Grid.Row="2" Width="200" Height="30" Margin="0 40 0 0" BorderThickness="0 0 0 1" BorderBrush="{StaticResource MainGreen}">
@@ -81,7 +81,7 @@
                                 <ColumnDefinition />
                             </Grid.ColumnDefinitions>
                             <Image Source="/Resources/Green/LoginPassword.png" HorizontalAlignment="Left" VerticalAlignment="Center" Height="20" Width="20"/>
-                            <PasswordBox Grid.Column="1" x:Name="Password" materialDesign:HintAssist.Hint="{DynamicResource InputAccount}" FontSize="14" Padding="5 0 0 0" VerticalContentAlignment="Center" materialDesign:TextFieldAssist.UnderlineBrush="Transparent" BorderThickness="0"/>
+                            <PasswordBox Grid.Column="1" x:Name="Password" materialDesign:HintAssist.Hint="{DynamicResource InputPassword}" FontSize="14" Padding="5 0 0 0" VerticalContentAlignment="Center" materialDesign:TextFieldAssist.UnderlineBrush="Transparent" BorderThickness="0"/>
                         </Grid>
                     </Border>
                     <Grid Grid.Row="3" Margin="0 35 0 0" Width="200" Height="16" VerticalAlignment="Center" HorizontalAlignment="Center">
@@ -89,7 +89,7 @@
                             <ColumnDefinition />
                             <ColumnDefinition />
                         </Grid.ColumnDefinitions>
-                        <CheckBox Content="{DynamicResource RememberPassword}" Foreground="{StaticResource Gray}" BorderBrush="{StaticResource Gray}" Padding="0 0 0 0" Background="{StaticResource MainGreen}" Style="{StaticResource MaterialDesignCheckBox}" FontSize="12" VerticalAlignment="Center" HorizontalAlignment="Left" Cursor="Hand"/>
+                        <CheckBox IsChecked="{Binding IsRememberPassword}" Content="{DynamicResource RememberPassword}" Foreground="{StaticResource Gray}" BorderBrush="{StaticResource Gray}" Padding="0 0 0 0" Background="{StaticResource MainGreen}" Style="{StaticResource MaterialDesignCheckBox}" FontSize="12" VerticalAlignment="Center" HorizontalAlignment="Left" Cursor="Hand"/>
                         <TextBlock Grid.Column="1" Text="{DynamicResource ForgetPassword}" Foreground="{StaticResource Gray}" FontSize="12" HorizontalAlignment="Right" VerticalAlignment="Center" Cursor="Hand"/>
                     </Grid>
                     <Button Grid.Row="4" Content="{DynamicResource Login}" Click="Login_Click" Foreground="White" Background="{StaticResource DarkGreen}" Width="200" BorderThickness="0" VerticalAlignment="Bottom" Margin="0 0 0 60"/>
@@ -110,5 +110,23 @@
                 </Grid>
             </materialDesign:Flipper.BackContent>
         </materialDesign:Flipper>
+        <Popup x:Name="AccountPopup" Placement="Bottom" PlacementTarget="{Binding ElementName=Account}" StaysOpen="False" Width="{Binding ElementName=Account,Path=ActualWidth}" PopupAnimation="Slide" VerticalOffset="5">
+            <Border Background="White" BorderThickness="1" BorderBrush="{StaticResource LightGray}">
+                <ListBox x:Name="AccountList" SelectionChanged="AccountList_SelectionChanged" BorderThickness="0" Background="Transparent">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate DataType="{x:Type local:UserNameModel}">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="160"/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
+                                <TextBlock HorizontalAlignment="Stretch" Margin="10 5 10 5" VerticalAlignment="Center" Text="{Binding UserName}" TextTrimming="CharacterEllipsis" FontSize="14" Foreground="Black"/>
+                                <styles:ImageButton Grid.Column="1" x:Name="Delete" Cursor="Hand" Click="Delete_Click" Width="18" Height="18" Image="/Resources/Gray/Delete.png" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                            </Grid>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+            </Border>
+        </Popup>
     </Grid>
 </Window>
