--- a/TravelFriend.Windows/Main/PersonalDataPopup.xaml
+++ b/TravelFriend.Windows/Main/PersonalDataPopup.xaml
@@ -52,7 +52,7 @@
                 <Image Source="/Resources/Green/Signature.png" Width="18" Height="18" VerticalAlignment="Top"/>
                 <TextBlock Margin="12,0,0,0" Text="{Binding Signature}" FontSize="14" TextTrimming="CharacterEllipsis" TextWrapping="Wrap" Width="110" Height="100"/>
             </StackPanel>
-            <Button Grid.Row="3" Content="{DynamicResource UpdatePersonalData}" Foreground="White" Background="{StaticResource MainGreen}" Width="100" BorderThickness="0" Height="25" Margin="0 0 0 0"/>
+            <Button Grid.Row="3" Content="{DynamicResource UpdatePersonalData}" Click="Button_Click" Foreground="White" Background="{StaticResource MainGreen}" Width="100" BorderThickness="0" Height="25" Margin="0 0 0 0"/>
         </Grid>
     </ms:MessageBorder>
 </Popup>
