--- a/TravelFriend.Windows/MainWindow.xaml
+++ b/TravelFriend.Windows/MainWindow.xaml
@@ -259,7 +259,7 @@
                         <Image Grid.Column="1" Source="/Resources/Gray/ToggleDown.png" Width="12" VerticalAlignment="Center" HorizontalAlignment="Left"/>
                     </Grid>
                     <Image Grid.Column="3" Margin="20 0 20 0" Source="/Resources/Gray/Message.png" Width="16" VerticalAlignment="Center" Cursor="Hand"/>
-                    <Image Grid.Column="4" Margin="0 0 20 0" Source="/Resources/Gray/Setting.png" Width="16" VerticalAlignment="Center" Cursor="Hand"/>
+                    <Image x:Name="Setting" Grid.Column="4" Margin="0 0 20 0" MouseLeftButtonUp="Setting_MouseLeftButtonUp" Source="/Resources/Gray/Setting.png" Width="16" VerticalAlignment="Center" Cursor="Hand"/>
                     <Border Grid.Column="5" Margin="0 0 20 0" Width="1" Height="18" BorderThickness="1" BorderBrush="{StaticResource Gray}" VerticalAlignment="Center"/>
                     <Image x:Name="Min" MouseLeftButtonUp="Min_MouseLeftButtonUp" Grid.Column="6" Margin="0 0 20 0" Source="/Resources/Gray/Min.png" Width="14" VerticalAlignment="Center" Cursor="Hand"/>
                     <Image x:Name="Max" MouseLeftButtonUp="Max_MouseLeftButtonUp" Grid.Column="7" Margin="0 0 20 0" Source="{Binding IsMax}" Width="14" VerticalAlignment="Center" Cursor="Hand"/>
@@ -270,6 +270,7 @@
             <team:TeamPage Grid.Row="1" Grid.Column="1" Visibility="Collapsed"/>
             <main:UpdatePersonalData x:Name="UpdatePersonalData" Grid.ColumnSpan="2" Grid.RowSpan="2" Visibility="Collapsed"/>
             <main:PersonalDataPopup x:Name="PersonalDataPopup" Placement="Bottom" PlacementTarget="{Binding ElementName=PersonalData}" VerticalOffset="5" StaysOpen="False"/>
+            <main:SettingPopup x:Name="SettingPopup" Placement="Bottom" PlacementTarget="{Binding ElementName=Setting}" VerticalOffset="5" HorizontalOffset="-10" StaysOpen="False"/>
             <common:Toast x:Name="Toast" Grid.ColumnSpan="2" Grid.RowSpan="2"/>
         </Grid>
     </Border>
