--- a/TravelFriend.Windows/MainWindow.xaml
+++ b/TravelFriend.Windows/MainWindow.xaml
@@ -68,11 +68,6 @@
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <Border Grid.RowSpan="2" Width="215" BorderBrush="{StaticResource LightGray}" BorderThickness="0 0 1 0" HorizontalAlignment="Center" VerticalAlignment="Stretch">
-                <Border.Effect>
-                    <DropShadowEffect Color="Black" BlurRadius="15" ShadowDepth="6" Opacity=".8"/>
-                </Border.Effect>
-            </Border>
             <Grid Grid.RowSpan="2" Width="215" Background="White" VerticalAlignment="Stretch">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
@@ -218,7 +213,7 @@
                     </RadioButton>
                 </StackPanel>
             </Grid>
-            <Border Grid.Column="1" Height="50" BorderBrush="{StaticResource LightGray}" BorderThickness="0 0 0 1">
+            <Border Grid.Column="1" Height="50" Background="{StaticResource BackgroundGray}">
                 <Grid x:Name="TopArea" Background="Transparent">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
@@ -232,7 +227,7 @@
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
                     <Border Grid.ColumnSpan="5" MouseLeftButtonDown="TopArea_MouseLeftButtonDown" Background="Transparent"/>
-                    <Border BorderThickness="0.5" BorderBrush="{StaticResource Gray}" Height="30" CornerRadius="5" Width="260" Margin="65 0 0 0" HorizontalAlignment="Left">
+                    <Border BorderThickness="0.2" BorderBrush="{StaticResource Gray}" Background="White" Height="30" CornerRadius="5" Width="260" Margin="65 0 0 0" HorizontalAlignment="Left">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto"/>
@@ -266,7 +261,10 @@
                     <Image x:Name="Close" MouseLeftButtonUp="Close_MouseLeftButtonUp" Grid.Column="8" Margin="0 0 26 0" Source="/Resources/Gray/Close.png" Width="14" VerticalAlignment="Center" Cursor="Hand"/>
                 </Grid>
             </Border>
-            <UserControl Grid.Row="1" Grid.Column="1" x:Name="PageContainer" Margin="30"/>
+            <Border Grid.Column="1" Height="50" BorderBrush="{StaticResource LightGray}" BorderThickness="0 0 0 0.5" Margin="30 0" Opacity="0.5"/>
+            <Border Grid.Row="1" Grid.Column="1" Background="{StaticResource BackgroundGray}">
+                <UserControl x:Name="PageContainer" Margin="30"/>
+            </Border>
             <main:UpdatePersonalData x:Name="UpdatePersonalData" Grid.ColumnSpan="2" Grid.RowSpan="2" Visibility="Collapsed"/>
             <main:PersonalDataPopup x:Name="PersonalDataPopup" Placement="Bottom" PlacementTarget="{Binding ElementName=PersonalData}" VerticalOffset="5" StaysOpen="False"/>
             <main:SettingPopup x:Name="SettingPopup" Placement="Bottom" PlacementTarget="{Binding ElementName=Setting}" VerticalOffset="5" HorizontalOffset="-10" StaysOpen="False"/>
