--- a/TravelFriend.Windows/Styles/Language_CN.xaml
+++ b/TravelFriend.Windows/Styles/Language_CN.xaml
@@ -55,4 +55,8 @@
     <sys:String x:Key="CreateTeam">创建团队</sys:String>
     <sys:String x:Key="NoCreateAnyTeam">未创建任何团队</sys:String>
     <sys:String x:Key="NoJoinAnyTeam">未加入任何团队</sys:String>
+    <sys:String x:Key="Return">返回</sys:String>
+    <sys:String x:Key="TeamMember">团队成员</sys:String>
+    <sys:String x:Key="UpdateTeamInfo">修改团队信息</sys:String>
+    <sys:String x:Key="CreateAlbum">新建相册</sys:String>
 </ResourceDictionary>
