--- a/TravelFriend.Windows/Main/UpdatePersonalData.xaml
+++ b/TravelFriend.Windows/Main/UpdatePersonalData.xaml
@@ -30,7 +30,7 @@
         </Style>
     </UserControl.Resources>
     <Grid>
-        <Border Background="Black" Opacity="0.8" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+        <Border Background="Black" Opacity="0.7" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
         <Border CornerRadius="10" Width="550" Height="400" Background="White">
             <Grid>
                 <Grid.RowDefinitions>
@@ -61,17 +61,17 @@
                     <RadioButton Margin="20 0 0 0" Content="{DynamicResource Famale}" IsChecked="{Binding IsFamale}" Background="{StaticResource MainGreen}" FontSize="14" Padding="5 0" Style="{StaticResource MaterialDesignRadioButton}"/>
                     <StackPanel Orientation="Horizontal" Margin="55 0 55 0">
                         <TextBlock Text="{DynamicResource BirthdayColon}"/>
-                        <DatePicker Width="100" DisplayDate="{Binding Birthday}" Margin="0 -10 0 0" materialDesign:TextFieldAssist.UnderlineBrush="{StaticResource MainGreen}" BorderBrush="{StaticResource MainGreen}"/>
+                        <TextBox Width="100" FontSize="14" BorderThickness="0 0 0 1" BorderBrush="{StaticResource MainGreen}" Text="{Binding Birthday}"/>
                     </StackPanel>
                 </StackPanel>
                 <StackPanel Grid.Row="4" Orientation="Horizontal" Margin="55 20 55 0">
                     <TextBlock Text="{DynamicResource AddressColon}"/>
-                    <ComboBox Width="150" Text="{Binding Address}" BorderBrush="{StaticResource MainGreen}" IsEditable="True" materialDesign:TextFieldAssist.UnderlineBrush="{StaticResource MainGreen}" materialDesign:HintAssist.HintOpacity=".26"/>
-                    <ComboBox Margin="25 0 0 0" Text="{Binding Address}" Width="190" BorderBrush="{StaticResource MainGreen}" IsEditable="True" materialDesign:TextFieldAssist.UnderlineBrush="{StaticResource MainGreen}" materialDesign:HintAssist.HintOpacity=".26"/>
+                    <ComboBox Width="150" Text="{Binding Address}" Cursor="IBeam" BorderBrush="{StaticResource MainGreen}" IsEditable="True" materialDesign:TextFieldAssist.UnderlineBrush="{StaticResource MainGreen}" materialDesign:HintAssist.HintOpacity=".26"/>
+                    <ComboBox Margin="25 0 0 0" Text="{Binding Address}" Width="190" Cursor="IBeam" BorderBrush="{StaticResource MainGreen}" IsEditable="True" materialDesign:TextFieldAssist.UnderlineBrush="{StaticResource MainGreen}" materialDesign:HintAssist.HintOpacity=".26"/>
                 </StackPanel>
                 <StackPanel Grid.Row="5" Orientation="Horizontal" Margin="55 20 55 0">
                     <TextBlock Text="{DynamicResource SignatureColon}" VerticalAlignment="Top" Margin="0 3 0 0"/>
-                    <TextBox Text="{Binding Signature}" materialDesign:HintAssist.Hint="{DynamicResource InputSignature}" VerticalContentAlignment="Top" materialDesign:HintAssist.Foreground="{StaticResource DarkGray}" Height="90" Width="390"/>
+                    <TextBox Text="{Binding Signature}" TextWrapping="Wrap" materialDesign:HintAssist.Hint="{DynamicResource InputSignature}" VerticalContentAlignment="Top" materialDesign:HintAssist.Foreground="{StaticResource DarkGray}" Height="90" Width="390"/>
                 </StackPanel>
                 <StackPanel Grid.Row="6" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 20 0 0">
                     <Button x:Name="Save" Height="30" Width="70" Click="Save_Click" Background="{StaticResource MainGreen}" Foreground="White" Content="{DynamicResource Save}" BorderThickness="0"/>
