--- a/TravelFriend.Windows/Home/HomePage.xaml
+++ b/TravelFriend.Windows/Home/HomePage.xaml
@@ -7,6 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <TextBlock Text="我是小胖" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="30" FontWeight="Bold"/>
+        <TextBlock Text="先登录吧" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="30" FontWeight="Bold"/>
     </Grid>
 </UserControl>
